fix: update display name to avoid marketplace conflict

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "comment-translator",
-    "displayName": "Comment Translator",
+    "displayName": "Smart Comment Translator",
     "description": "Instantly translate code comments to your preferred language with smart caching and multi-language support",
     "version": "0.1.0",
     "publisher": "ElvisRP22",
