chore: remove GITHUB_SUBIDO.md from repo and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ TESTING.md
 INDEX.md
 ARQUITECTURA.md
 publish-helper.ps1
+GITHUB_SUBIDO.md
 
 # Archivos de prueba (opcional mantenerlos)
 test-file-russian.ts
